Fixed bug #21442 (Crash of mail() on Windows when the first parameter is empty).